SITE-833 -- clean-up filter collapse rendering issues

--- a/trunk/www/triples/triples.less
+++ b/trunk/www/triples/triples.less
@@ -36,6 +36,10 @@
   margin-top: -7px;
 }
 
+.links.column {
+  margin-top: 55px;
+}
+
 .section {
   margin: 20px 0 20px 250px;
   /*background: #fff;
